package edu.fiuba.algo3.modelo.Recursos.Gas;

public interface RefineriaDeGas {
    
	int extraerGasDe(Volcan unVolcan);
    int obtenerGas();
    boolean tieneRefineria();
}
